--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -4,13 +4,21 @@
   align-items: center;
   width: calc(100% - 600px);
   max-height: 100%;
-  background-color: $contentBackground;
   box-sizing: border-box;
+  opacity: 0.8;
 
-  .egg {
+  .filling {
+    display: inherit;
+    justify-content: center;
+    background-color: $contentBackground;
     width: 100%;
     height: 100%;
-    max-width: 600px;
+
+    .egg {
+       width: 100%;
+       height: 100%;
+       max-width: 600px;
+    }
   }
 
   @media screen and (min-width: $tabletWidth) {
