--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -7,3 +7,13 @@
   font-family: "PlayfairDisplay";
   src: url("../assets/fonts/PlayfairDisplay-Regular.ttf") format('truetype');
 }
+
+@font-face {
+  font-family: "CirceLight";
+  src: url("../assets/fonts/Circe-Light.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "CirceBold";
+  src: url("../assets/fonts/Circe-Bold.ttf") format('truetype');
+}
