--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,9 +6,10 @@
 @import "offer";
 @import "gratitude";
 
-
 body {
-  font-family: 'GothamPro-Light', sans-serif;
+  font-family: 'CirceLight', sans-serif;
+  font-size: 1.1rem;
+  line-height: 1.3;
 }
 
 input {
@@ -36,3 +37,9 @@ a {
   @import "donation";
 }
 
+.offer {
+  @media screen and (max-width: $tabletWidth) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
