add localize and eng currency min value check feature

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,7 +37,8 @@ a {
   @import "donation";
 }
 
-.offer {
+.offer,
+.gratitude {
   @media screen and (max-width: $tabletWidth) {
     margin-left: 20px;
     margin-right: 20px;
