--- a/src/scss/gratitude.scss
+++ b/src/scss/gratitude.scss
@@ -1,5 +1,19 @@
 @import "templates";
 
 .gratitude {
-  @extend %page
+  @extend %page;
+
+  font-size: 1.3rem;
+
+  .museumLogo {
+    width: 150px;
+    height: 100%;
+    margin-bottom: 50px;
+  }
+
+  .image {
+    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+  }
 }
