--- a/src/scss/donation.scss
+++ b/src/scss/donation.scss
@@ -38,6 +38,7 @@
       font-family: 'PlayfairDisplay', serif;
       text-align: center;
       margin-bottom: 1em;
+      font-size: 2.4rem;
     }
   }
 
@@ -47,7 +48,7 @@
       display: flex;
 
       .donation__form__field {
-        margin-right: 15px;
+        margin-right: 10px;
 
         &:last-child {
           margin-right: 0;
