--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -38,7 +38,7 @@ a {
 }
 
 .offer,
-.gratitude {
+.wrap .gratitude {
   @media screen and (max-width: $tabletWidth) {
     margin-left: 20px;
     margin-right: 20px;
