--- a/src/scss/donation.scss
+++ b/src/scss/donation.scss
@@ -10,6 +10,10 @@
   padding: 30px 50px;
   box-sizing: border-box;
 
+  @media screen and (max-width: $mobileWidth) {
+    padding: 30px 20px;
+  }
+
   .donation__header {
     display: inherit;
     justify-content: space-between;
