--- a/src/scss/templates.scss
+++ b/src/scss/templates.scss
@@ -3,11 +3,23 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  min-width: 350px;
   max-width: 800px;
   margin: 50px auto;
   padding: 50px;
   border-radius: 15px;
   position: relative;
   box-shadow: 0px 25px 50px 10px gray;
+
+  @media screen and (max-width: $tabletWidth) {
+    h1 {
+      font-size: 1.8rem;
+    }
+  }
+
+  @media screen and (max-width: $mobileWidth) {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 30px;
+    box-shadow: none;
+  }
 }
