add focus on amount sum input

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,19 +1,23 @@
 @font-face {
   font-family: "GothamPro-Light";
   src: url("../assets/fonts/GothamPro-Light.woff") format('woff');
+  font-display: fallback;
 }
 
 @font-face {
   font-family: "PlayfairDisplay";
   src: url("../assets/fonts/PlayfairDisplay-Regular.ttf") format('truetype');
+  font-display: fallback;
 }
 
 @font-face {
   font-family: "CirceLight";
   src: url("../assets/fonts/Circe-Light.ttf") format('truetype');
+  font-display: fallback;
 }
 
 @font-face {
   font-family: "CirceBold";
   src: url("../assets/fonts/Circe-Bold.ttf") format('truetype');
+  font-display: fallback;
 }
