--- a/src/scss/offer.scss
+++ b/src/scss/offer.scss
@@ -3,22 +3,12 @@
 .offer {
  @extend %page;
 
-  .donation__form-button {
+  & > a {
     align-self: start;
+  }
 
-    & button {
-      font-weight: bold;
-      padding: 15px 20px;
-      margin-right: 10px;
-      background: $optionBtn;
-      border-radius: $btnRadius;
-      border: none;
-      outline: none;
-
-      &:hover {
-        background: $hoverOptionBtn;
-        cursor: pointer;
-      }
-    }
+  &__button-back {
+    @extend %button;
+    font-weight: bold;
   }
 }
