styles refactoring, reports page and line separator has been added

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -21,3 +21,6 @@ $hoverActiveOptionBtn: #202428;
 $invalidPaymentBtn: $inputBorder;
 $validPaymentBtn: $validInputBorder;
 $hoverValidPaymentBtn: #23923c;
+
+$pageShadow: #808080;
+$text: #000;
