--- a/src/scss/donation.scss
+++ b/src/scss/donation.scss
@@ -11,7 +11,6 @@
   background-color: $formBackground;
   padding: 30px 50px;
   box-sizing: border-box;
-
   position: absolute;
   top: 0;
   right: 0;
@@ -49,11 +48,21 @@
     }
   }
 
+  &__header-buttons {
+    display: inherit;
+    justify-content: space-between;
+    width: 80px;
+  }
+
   &__title-heading {
     font-family: 'PlayfairDisplay', serif;
     text-align: center;
     margin-bottom: 1em;
     font-size: 2.4rem;
+  }
+
+  &__title-description {
+    text-align: justify;
   }
 
   &__form {
@@ -156,6 +165,7 @@
 
   &__form-agreement {
     margin-left: 5px;
+    //font-size: 1rem;
   }
 
   &__form-button {
@@ -169,6 +179,7 @@
     @media screen and (max-width: $mobileWidth) {
       margin-top: 15px;
       margin-right: 0;
+      height: 40px;
     }
 
     &.checked {
@@ -184,6 +195,8 @@
   &__form-note {
     display: block;
     margin-top: 10px;
+    font-weight: bold;
+    text-align: justify;
   }
 
   &__form-text {
@@ -205,6 +218,10 @@
     color: $formBackground;
     transition: .4s ease;
     cursor: not-allowed;
+
+    @media screen and (max-width: $tabletWidth) {
+      height: 80px;
+    }
 
     &.active {
       background-color: $validPaymentBtn;
