--- a/src/scss/templates.scss
+++ b/src/scss/templates.scss
@@ -1,14 +1,24 @@
 %page {
   display: flex;
   flex-flow: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  flex-grow: 1;
+  min-height: 100vh;
   max-width: 800px;
   margin: 50px auto;
   padding: 50px;
   border-radius: 15px;
   position: relative;
-  box-shadow: 0px 25px 50px 10px gray;
+  box-shadow: 0 25px 50px 10px $pageShadow;
+
+  h1 {
+    margin-top: 50px;
+  }
+
+  & > a {
+    align-self: start;
+  }
 
   @media screen and (max-width: $tabletWidth) {
     h1 {
@@ -17,8 +27,7 @@
   }
 
   @media screen and (max-width: $mobileWidth) {
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
     padding: 30px;
     box-shadow: none;
   }
@@ -34,9 +43,11 @@
   border-radius: $btnRadius;
   border: none;
   outline: none;
+  transition: .3s ease;
 
   &:hover {
     background: $hoverOptionBtn;
     cursor: pointer;
+    transition: .3s ease;
   }
 }
