--- a/src/scss/report.scss
+++ b/src/scss/report.scss
@@ -16,6 +16,12 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__item {
+    list-style: none;
   }
 
   &__item-link {
