--- a/src/scss/gratitude.scss
+++ b/src/scss/gratitude.scss
@@ -10,6 +10,9 @@
     font-size: 1.3rem;
 
     .museumLogo {
+      height: 100%;
+      margin-bottom: 20px;
+
       .logo {
         width: 150px;
         height: 100%;
