--- a/src/scss/report.scss
+++ b/src/scss/report.scss
@@ -9,11 +9,18 @@
 
   &__heading {
     margin: 50px 0;
+    text-align: center;
+  }
+
+  &__description {
+    margin-top: 80px;
+    text-align: center;
   }
 
   &__list {
     display: flex;
-    justify-content: center;
+    flex-flow: wrap;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     padding: 0;
@@ -22,6 +29,15 @@
 
   &__item {
     list-style: none;
+    margin: 10px;
+    padding: 10px;
+    border-radius: $btnRadius;
+    transition: .2s ease-in;
+
+    &:hover {
+      box-shadow: 0px 10px 25px 0px #b6b6b6;
+      transition: .2s ease-in;
+    }
   }
 
   &__item-link {
