--- a/src/scss/report.scss
+++ b/src/scss/report.scss
@@ -35,7 +35,7 @@
     transition: .2s ease-in;
 
     &:hover {
-      box-shadow: 0px 10px 25px 0px #b6b6b6;
+      box-shadow: 0 10px 25px 0 #b6b6b6;
       transition: .2s ease-in;
     }
   }
