--- a/src/scss/donation.scss
+++ b/src/scss/donation.scss
@@ -48,14 +48,9 @@
     }
   }
 
-  //&__header-buttons {
-  //  display: inherit;
-  //  justify-content: space-between;
-  //  width: 80px;
-  //}
-
   &__header-buttons {
     display: inherit;
+    //justify-content: flex-end;
     justify-content: space-between;
     width: 150px;
 
